--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,10 @@
   background-color: black;
   color: #fff;
 }
+
+.para{
+  text-align: center;
+  color: rgba(128, 128, 128, 0.607);
+  font-size: 25px;
+  text-transform: uppercase;
+}
